Button on mobile fix

--- a/css/_toolbars.scss
+++ b/css/_toolbars.scss
@@ -65,10 +65,13 @@
         z-index: $toolbarZ;
 
         .button-group-center,
-        .button-group-left,
         .button-group-right {
             display: flex;
             width: 33%;
+        }
+
+        .button-group-left{
+            display: flex;
         }
 
         .button-group-center {
